--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <title>Nick & Alan</title>
     <script language="javascript" type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.5.2/p5.js"></script>
     <script language="javascript" type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.5.2/addons/p5.dom.js"></script>
+    <script language="javascript" type="text/javascript" src="./lib/p5.collide2d.js"></script>
     <!--<script language="javascript" type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.5.2/addons/p5.play.js"></script>-->
     <script src="./dist/bundle.js"></script>
     <!--<script src="./src/index.js"></script>-->
